--- a/nettisivu/yhteystiedot.html
+++ b/nettisivu/yhteystiedot.html
@@ -64,7 +64,7 @@
         <div class="box" style="height: 400px; width: 500px;">
             <h4>Ota yhteyttä:</h4>
             <br>
-            <a href="mailto:  asennukset@pirkanmaankaivotekniikka.fi" class="yt" style="font-size: 125%;">asennukset@pirkanmaankaivotekniikka.fi</a>
+            <a href="mailto:  asennukset@pirkanmaankaivotekniikka.fi" class="yt" style="font-size: 120%;">juha.riikonen@pirkanmaankaivotekniikka.fi</a>
             <br>
             <br>
             <a href="tel: 0401879041" class="yt"style="font-size: 125%;">Puh: 0401879041</a>
